# hasp

./: .hasp.yml  Cargo.toml  Dockerfile.lint  Dockerfile.reproduce  Dockerfile.selfscan  LICENSE  README.md  action.yml  build.rs
.github/: dependabot.yml
.github/workflows/: action-diff.yml  ci.yml  ratelimit.yml  release.yml  security.yml
data/: attacker_ref_patterns.txt  attacker_repository_patterns.txt  high_impact_secret_hints.txt  injectable_contexts.txt  popular_actions.txt  privileged_action_keywords.txt  privileged_actions.txt  scrubbed_env_vars.txt  trusted_owners.txt
data/fulcio/: intermediate_v1.pem
docs/: ARCHITECTURE.md  AUDITS.md  COMPARISON.md  EXEC.md  GITHUB_ACTION.md  NOTES.md  POLICY.md  REPRODUCE.md  SECURITY.md  TODO.md  TRUST.md
examples/: integration.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ipc_action_refs.rs  ipc_percent_decode.rs  ipc_scan_payload.rs  ipc_verifier_input.rs  yaml_scan.rs
proptest-regressions/: ipc.txt  proxy.txt
src/: cli.rs  diff.rs  error.rs  exec.rs  forward_proxy.rs  integrity.rs  ipc.rs  lib.rs  main.rs  manifest.rs  netguard.rs  proxy.rs  replay.rs  report.rs  sandbox.rs  scanner.rs  selfcheck.rs  supply_chain_graph.rs  token.rs
src/audit/: cross_workflow.rs  external_artifacts.rs  injection.rs  mod.rs  oidc.rs  permissions.rs  supply_chain.rs  triggers.rs
src/github/: client.rs  json.rs  mod.rs  provenance.rs  sigstore.rs  slsa.rs  transitive.rs  verify.rs
src/oidc/: aws.rs  azure.rs  gcp.rs  mod.rs
src/policy/: mod.rs  parse.rs
tests/: audit_paranoid.rs  cli.rs  containers.rs  cross_workflow_taint.rs  diff_base.rs  external_artifacts.rs  github_api.rs  integration.rs  integrity_check.rs  limits.rs  oidc_trust_policy.rs  pin_check.rs  policy.rs  pr_delta.rs  replay_history.rs  self_check.rs  supply_chain_tree.rs  workflow_scanning.rs
tests/common/: mod.rs
tests/fixtures/comment_mismatch/: mismatch.yml
tests/fixtures/containers/: containers.yml
tests/fixtures/cross_workflow/bug_completed_not_guard/: ci.yml  deploy.yml
tests/fixtures/cross_workflow/bug_conclusion_flagged/: pr.yml  sink.yml
tests/fixtures/cross_workflow/bug_dawidd6_downloader/: pr.yml  sink.yml
tests/fixtures/cross_workflow/bug_gh_run_download/: pr.yml  sink.yml
tests/fixtures/cross_workflow/bug_path_ref_unresolved/: ci.yml  sink.yml  unrelated_pr.yml
tests/fixtures/cross_workflow/pass_no_allowlist/: lonely.yml
tests/fixtures/cross_workflow/pass_prt_source/: pr.yml  priv.yml
tests/fixtures/cross_workflow/pass_push_only/: ci.yml  deploy.yml
tests/fixtures/docker_images/: docker.yml
tests/fixtures/local_composite/.github/actions/local/: action.yml
tests/fixtures/local_composite/.github/workflows/: local.yml
tests/fixtures/oidc/: aws_missing_aud.json  aws_overbroad.json  aws_safe.json
tests/fixtures/outside_git/: ci.yml
tests/fixtures/pin_check/: ci.yml
tests/fixtures/policy_suppress/: .hasp.yml
tests/fixtures/policy_suppress/workflows/: insecure.yml
tests/fixtures/subpath/: subpath.yml
tests/fixtures/transitive_composite/.github/actions/composite/: action.yml
tests/fixtures/transitive_composite/.github/workflows/: transitive.yml
tests/fixtures/unauditable/: reusable.yml
tests/fixtures/workflows/: pinning-errors.yml  vulnerable.yml
